# cctext

./: .gitignore  README.md  TODO.txt  mypy.ini  requirements-build.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
cctext/: __init__.py  api.py  context.py  resolver.py  ruparser.py  syntax.py
scripts/: Build.ps1  Deploy.ps1  RunLint.ps1  Setup.ps1  Test.ps1
tests/: __init__.py  t_api.py  t_context.py  t_reference.py  t_resolver.py  t_rumodel.py  t_ruparser.py
