[metadata]
name = cctext
version = file: VERSION
author = CIHT CONCEPT, IRBorisov
author_email = iborisov@acconcept.ru
description = Concept text processing library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    razdel
    pymorphy3
    pymorphy3-dicts-ru